# screenlink

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/app/: Cargo.toml  build.rs
crates/app/src/: clipboardsync.rs  icon.rs  inputloop.rs  logging.rs  loopback.rs  main.rs  mirror.rs  net.rs  ui.rs
crates/clipboard/: Cargo.toml
crates/clipboard/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  framing.rs  lib.rs  pairing.rs  protocol.rs  realtime.rs  security.rs  trust.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: lib.rs  selftest.rs
crates/input/: Cargo.toml
crates/input/src/: edge.rs  keymap_win.rs  lib.rs  stub.rs  unix.rs  win_capture.rs  win_inject.rs
crates/video/: Cargo.toml
crates/video/src/: capture.rs  codec.rs  lib.rs  pipeline.rs  transport.rs
docs/: cowork-test-prompt.md  cross-platform.md  manual-test-checklist.md  phase2-architecture.md
driver/: README.md
installer/: screenlink.iss
