# ScreenLink — Cargo workspace
# An open-source Windows software KVM (Phase 1) with a wireless second-monitor
# mode (Phase 2, feature-gated). See README.md.
[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/discovery",
    "crates/input",
    "crates/clipboard",
    "crates/video",
    "crates/app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
authors = ["ScreenLink contributors"]
repository = "https://github.com/meashishpatel/screenlink"
homepage = "https://github.com/meashishpatel/screenlink"
description = "Low-latency, zero-config software KVM (and wireless second monitor) for Windows."

# Shared dependency versions. Individual crates opt in via `dep.workspace = true`.
[workspace.dependencies]
# Async + networking
tokio = { version = "1.38", features = ["rt-multi-thread", "net", "sync", "time", "macros", "io-util"] }
# TLS 1.3 control channel
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rcgen = "0.13"
rustls-pki-types = "1.7"
# Realtime channel AEAD
chacha20poly1305 = "0.10"
# Serialization
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.0", features = ["use-std"] }
# Discovery
mdns-sd = "0.11"
# Clipboard
arboard = "3.4"
# UI
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
tray-icon = "0.19"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Errors / utils
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
directories = "5.0"
hex = "0.4"
sha2 = "0.10"
# Windows APIs
windows = "0.58"
windows-sys = "0.59"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
