[package]
name = "screenlink-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "ScreenLink tray app: UI, wiring, and host/client orchestration."
default-run = "screenlink"

[[bin]]
name = "screenlink"
path = "src/main.rs"

[features]
default = ["gui"]
# GUI (tray + settings window). On by default for the shipped app; tests and the
# loopback demo can run with --no-default-features for a fast headless build.
gui = ["dep:eframe", "dep:egui", "dep:tray-icon"]
extend = ["screenlink-video/extend"]

[dependencies]
screenlink-core = { path = "../core" }
screenlink-discovery = { path = "../discovery" }
screenlink-input = { path = "../input" }
screenlink-clipboard = { path = "../clipboard" }
screenlink-video = { path = "../video" }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "sync", "time", "macros", "io-util", "signal"] }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
postcard = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
eframe = { workspace = true, optional = true }
egui = { workspace = true, optional = true }
tray-icon = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "net", "sync", "time", "macros", "io-util"] }

# Embeds the .exe icon from assets/icon.ico on Windows (no-op if the file is absent).
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
