[package]
name = "screenlink-clipboard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Clipboard synchronization for ScreenLink."

[dependencies]
screenlink-core = { path = "../core" }
arboard = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
