[package]
name = "screenlink-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared protocol, transport, security, and pairing for ScreenLink."

[dependencies]
tokio = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rcgen = { workspace = true }
rustls-pki-types = { workspace = true }
chacha20poly1305 = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
directories = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "net", "sync", "time", "macros", "io-util", "io-std"] }
