[package]
name = "screenlink-input"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Input capture, injection, and edge-transition logic for ScreenLink."

[dependencies]
screenlink-core = { path = "../core" }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Linux + macOS injection (client) via enigo, and capture/grab (host, experimental)
# via rdev.
[target.'cfg(unix)'.dependencies]
enigo = "0.3"
rdev = { version = "0.5", features = ["unstable_grab"] }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }
